# partty

./: .gitignore  TODO.md  detached-pane.html  icon-names.txt  index.html  package-lock.json  package.json  vite.config.ts
docs/: profiles.md
docs/config/: config.toml.md  keybinds.toml.md  themes.toml.md  workspaces.toml.md
extensions/: api.d.ts  index.example.js
improved-int-scripts/: termie-shell-integration.bash  termie-shell-integration.cmd  termie-shell-integration.fish  termie-shell-integration.ps1  termie-shell-integration.zsh
src/: chunkBuffer.ts  commandBlockOverlay.ts  commandHistory.ts  commandPalette.ts  connectionProfiles.ts  cwdTracker.ts  detachedPane.css  detachedPane.ts  devMetricsOverlay.ts  dialog.ts  draggablePanel.ts  extensionManager.ts  fileTreeBackend.ts  fileTreeCoordinator.ts  fileTreeGlyphs.ts  fileTreePanel.ts  fuzzy.ts  icon-list.txt  keybinds.ts  lazyOnce.ts  lexicalSearch.ts  lucideIcons.ts  main.ts  minimapColors.ts  motion.ts  mouseCursor.ts  oscCwd.ts  oscHandler.ts  overlayStack.ts  paletteCommands.ts  paneHost.ts  paneLayout.ts  paneRenamePanel.ts  perf.stub.ts  perf.ts  presetEditorModal.ts  presets.ts  presetsModal.ts  processTracking.ts  ptyIpc.ts  (+25 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/patches/portable-pty/: PATCH_NOTES.md
src-tauri/patches/portable-pty/src/win/: psuedocon.rs
src-tauri/permissions/: partty-ipc.toml  termie-ipc.toml
src-tauri/scripts/: partty-shell-integration.bash  partty-shell-integration.ps1  partty-shell-integration.zsh  termie-shell-integration.bash  termie-shell-integration.ps1  termie-shell-integration.zsh
src-tauri/src/: command_history.rs  fff_search_integration.rs  fs_watcher.rs  fs_workspace.rs  keybinds.rs  lib.rs  main.rs  palette_commands.rs  peb_cwd_windows.rs  prefs.rs  profile_icons.rs  profiles.rs  pty.rs  subprocess.rs  theme.rs  win_console.rs  window_state.rs  workspaces.rs
src/iconMappings/: configData.ts  folderNames.ts  index.ts  languages.ts  mediaArchive.ts  specialFiles.ts
