[package]
name = "partty"
version = "0.1.0"
description = "Raycast-style terminal overlay for Windows"
authors = ["you"]
edition = "2021"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[lib]
name = "partty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
portable-pty = "0.9"
dirs = "6"
parking_lot = "0.12"
tauri-plugin-clipboard-manager = "2"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
opener = "0.8"

[target.'cfg(windows)'.dependencies]
ntapi = { version = "0.4", features = ["user"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Wdk_System_Threading",
] }
winreg = "0.52"

[patch.crates-io]
portable-pty = { path = "patches/portable-pty" }
